Add styles to browser sample

--- a/WP81AudioTest/index.html
+++ b/WP81AudioTest/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Windows Phone 8.1 Audio Bug Test</title>
+    
+    <link rel="stylesheet" href="default.css"/>
 </head>
 <body>
     <div id="toolbar">
